--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
 
   service-database:
     image: mysql:5.7
+    ports: ["3306:3306"]
     environment:
       - MYSQL_ROOT_PASSWORD=secret
       - MYSQL_DATABASE=wordpress_tests
